--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -39,8 +39,8 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-   <!--<script src="js/site.js"></script>-->
 
+    <script src="js/site.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
